# MCP-IA

./: .env.example  .gitignore  PROMPTS_FOR_CODEX.md  README.md  pyproject.toml
examples/: cursor_mcp.json
src/automation_intel_mcp/: __init__.py  agency_server.py  cli.py  config.py  mcp_transport.py  models.py  research_server.py  runtime.py  server.py
src/automation_intel_mcp/graphs/: agency_graph.py  research_graph.py
src/automation_intel_mcp/services/: agency_research_templates.py  budget.py  cache.py  google_places.py  perplexity_client.py  research_features.py  research_gateway.py  run_store.py  web_fetcher.py
src/automation_intel_mcp/tools/: agency_logic.py
tests/: test_agency_graph.py  test_agency_logic.py  test_budget.py  test_cache.py  test_cli.py  test_mcp_surface.py  test_mcp_transport.py  test_perplexity_client.py  test_research_gateway.py  test_research_graph.py  test_web_fetcher.py
